# substreams-erc20-contracts

./: Cargo.toml  Makefile  README.md  schema.graphql  schema.sql  subgraph.yaml  substreams.yaml
proto/v1/: erc20.contract.proto  erc20.contracts.proto
src/: lib.rs  maps.rs  sink.rs  store.rs
src/pb/: erc20.contracts.types.v1.rs  erc20.supply.types.v1.rs  mod.rs
